src/cli/renderer/snapshots/thndrs_core__renderer__live__tests__prompt_zero_width.snap
---
source: src/cli/renderer/live.rs
assertion_line: 1058
expression: combined
---
width=80:
│    ›  a​b‍c                                                                         # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=a​b‍c [bg=#212337]=                                                                      [bg=#212337]=  
width=40:
│    ›  a​b‍c                                 # [bg=#212337]=   [bg=#212337]=  [fg=#e0e0e0 bg=#212337]=› [bg=#212337]=   [fg=#ebfafa bg=#212337]=a​b‍c [bg=#212337]=                              [bg=#212337]=
